@@ -1332,7 +1332,10 @@ Object scheme::bytevectorTostringEx(VM* theVM, int argc, const Object* argv)
     argumentAsByteVector(0, bytevector);
     argumentAsTranscoder(1, transcoder);
 
-    BinaryInputPort* port = new ByteArrayBinaryInputPort(bytevector->data(), bytevector->length());
+    // check the BOM
+    const int skipSize = transcoder->codec().toCodec()->acceptBOM(bytevector);
+
+    BinaryInputPort* port = new ByteArrayBinaryInputPort(bytevector->data() + skipSize, bytevector->length() - skipSize);
     TRY {
         return Object::makeString(transcoder->getString(port));
     } CATCH(ioError) {
